manifests/3-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: breton
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: breton
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: postgres  
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.0
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 5Gi
