manifests/4-web.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/proxy-body-size: 250M
  name: breton
  namespace: breton
spec:
  rules:
  - host: bretonlikethecrackers.com
    http:
      paths:
      - backend:
          serviceName: breton
          servicePort: 80
  tls:
  - hosts:
    - bretonlikethecrackers.com
    secretName: breton-tls
---
apiVersion: v1
kind: Service
metadata:
  name: breton
  namespace: breton
spec:
  ports:
  - port: 80
    targetPort: 8000
  selector:
    app: breton
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: breton
  namespace: breton
  labels:
    app: breton
spec:
  selector:
    matchLabels:
      app: breton
  serviceName: breton  
  template:
    metadata:
      labels:
        app: breton
    spec:
      imagePullSecrets:
      - name: github-pkg-reg-creds

      containers:
      - name: breton
        image: docker.pkg.github.com/sventi555/breton/breton:0.0.6-alpha
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: breton-media
          mountPath: /code/media
        - name: breton-static
          mountPath: /code/static
      imagePullSecrets:
      - name: github-pkg-reg-creds
  volumeClaimTemplates:
  - metadata:
      name: breton-media
    spec:
      accessModes:
      - ReadWriteMany
      storageClassName: nfs
      resources:
        requests:
          storage: 2Gi
  - metadata:
      name: breton-static
    spec:
      accessModes:
      - ReadWriteMany
      storageClassName: nfs
      resources:
        requests:
          storage: 2Gi
